--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "echarts-wordcloud": "^2.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.3.1",
     "uuid": "^11.1.0"
   },
