--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.3.1",
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
